# TradingApp

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  streamlit_app.py  trading_app.db
.github/workflows/: python-tests.yml
alembic/: env.py
alembic/versions/: 94312dbffa3d_add_entry_commissions_strikeprice_.py
charts/: overlays.py  plotly_charts.py
config/: preferences.yaml
data/logs/: tradingapp_debug.log.2025-12-15  tradingapp_debug.log.2025-12-16  tradingapp_debug.log.2025-12-17  tradingapp_debug.log.2025-12-18  tradingapp_debug.log.2025-12-19
db/: models.py  refresh_db.py  schema_migration.py  session.py
ibkr/: connection.py  data.py  test.py  test_data.py  test_raw.py
src/trading_app/: __init__.py
src/trading_app/cli/: main.py
src/trading_app/config/: defaults.yaml
src/trading_app/data/: provider.py
src/trading_app/execution/: executor.py
src/trading_app/models/: trade.py
src/trading_app/strategies/: example_strategy.py
streamlit_app/: app.py
streamlit_app/pages/: 1_Home.py  2_New_Trade.py  3_Open_&_Closed_Trades.py  3_Open_Trades.py  4_Closed_Trades.py  4_Dashboard.py  5_Dashboard.py  6_DB_Admin.py  98_QuoteManager_Test.py  99_Diagnostics.py
tests/: test_cleaners.py  test_dataframe_cleaning.py  test_formatters.py  test_ibkr_data.py  test_strategy.py
utils/: cache.py  cleaners.py  formatters.py  hashing.py  ibkr.py  logger.py  market_clock.py  quote_manager.py  test_ibkr.py  timezones.py  trades.py  validation.py
