[project]
name = "tradingapp"
version = "0.1.0"
description = "Minimal modular TradingApp scaffold (example)."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.dependencies]
pandas = "^2.0"
numpy = "^1.27"
pydantic = "^2.5"
requests = "^2.31"
aiohttp = "^3.9"

[project.optional-dependencies]
testing = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
